--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
                             <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-3 rounded-lg transition-colors duration-200">
                                 Registrar Movimiento
                             </button>
+                            <button type="button" onclick="showMultiSaleModal()" class="w-full bg-purple-500 hover:bg-purple-600 text-white font-semibold py-3 rounded-lg transition-colors duration-200 mt-2">
+                                Venta múltiple
+                            </button>
                         </form>
                     </div>
 
@@ -579,7 +582,27 @@
             </form>
         </div>
     </div>
-
+    <!-- Modal Venta Múltiple -->
+    <div id="multiSaleModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50 p-4">
+        <div class="bg-white rounded-xl shadow-2xl p-6 w-full max-w-2xl max-h-[90vh] overflow-y-auto">
+            <h3 class="text-lg font-semibold text-gray-900 mb-4">Venta Múltiple</h3>
+            <form id="multiSaleForm" class="space-y-4">
+                <div id="multiSaleProducts"></div>
+                <button type="button" onclick="addMultiSaleRow()" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg mb-2">
+                    + Agregar producto
+                </button>
+                <div class="flex space-x-3 pt-4">
+                    <button type="submit" class="flex-1 bg-purple-500 hover:bg-purple-600 text-white font-semibold py-3 rounded-lg transition-colors duration-200">
+                        Registrar Venta
+                    </button>
+                    <button type="button" onclick="closeModal('multiSaleModal')" class="flex-1 bg-gray-300 hover:bg-gray-400 text-gray-700 font-semibold py-3 rounded-lg transition-colors duration-200">
+                        Cancelar
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+    
     <!-- Add Category Modal -->
     <div id="addCategoryModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50 p-4">
         <div class="bg-white rounded-xl shadow-2xl p-6 w-full max-w-md">
@@ -623,6 +646,27 @@
                         Actualizar Tasa
                     </button>
                     <button type="button" onclick="closeModal('exchangeRateModal')" class="flex-1 bg-gray-300 hover:bg-gray-400 text-gray-700 font-semibold py-3 rounded-lg transition-colors duration-200">
+                        Cancelar
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Modal Venta Múltiple -->
+    <div id="multiSaleModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50 p-4">
+        <div class="bg-white rounded-xl shadow-2xl p-6 w-full max-w-2xl max-h-[90vh] overflow-y-auto">
+            <h3 class="text-lg font-semibold text-gray-900 mb-4">Venta Múltiple</h3>
+            <form id="multiSaleForm" class="space-y-4">
+                <div id="multiSaleProducts"></div>
+                <button type="button" onclick="addMultiSaleRow()" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg mb-2">
+                    + Agregar producto
+                </button>
+                <div class="flex space-x-3 pt-4">
+                    <button type="submit" class="flex-1 bg-purple-500 hover:bg-purple-600 text-white font-semibold py-3 rounded-lg transition-colors duration-200">
+                        Registrar Venta
+                    </button>
+                    <button type="button" onclick="closeModal('multiSaleModal')" class="flex-1 bg-gray-300 hover:bg-gray-400 text-gray-700 font-semibold py-3 rounded-lg transition-colors duration-200">
                         Cancelar
                     </button>
                 </div>
@@ -1170,6 +1214,7 @@
         }
 
         // Add movement from modal
+
         function addMovementFromModal(event) {
             event.preventDefault();
             
@@ -1226,6 +1271,7 @@
 
             saveToLocalStorage();
             updateDisplay();
+            renderRecentMovements(); // <-- Asegura actualización inmediata
             showNotification('Movimiento registrado exitosamente', 'success');
         }
 
@@ -1888,6 +1934,69 @@
             reader.readAsText(file);
         }
 
+        function showMultiSaleModal() {
+            document.getElementById('multiSaleForm').reset?.();
+            document.getElementById('multiSaleProducts').innerHTML = '';
+            addMultiSaleRow();
+            showModal('multiSaleModal');
+        }
+
+        function addMultiSaleRow() {
+            const container = document.getElementById('multiSaleProducts');
+            const rowId = Date.now();
+            const options = products.map(p => `<option value="${p.id}">${p.name} (Stock: ${p.stock})</option>`).join('');
+            const row = document.createElement('div');
+            row.className = "flex space-x-2 mb-2";
+            row.innerHTML = `
+                <select required class="flex-1 px-2 py-2 border border-gray-300 rounded-lg" name="product">
+                    <option value="">Producto</option>
+                    ${options}
+                </select>
+                <input type="number" min="1" required class="w-24 px-2 py-2 border border-gray-300 rounded-lg" name="quantity" placeholder="Cantidad">
+                <button type="button" onclick="this.parentElement.remove()" class="bg-red-500 hover:bg-red-600 text-white px-2 rounded">✕</button>
+            `;
+            container.appendChild(row);
+        }
+
+        document.getElementById('multiSaleForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const rows = Array.from(document.getElementById('multiSaleProducts').children);
+            let error = false;
+            rows.forEach(row => {
+                const productId = parseInt(row.querySelector('select[name="product"]').value);
+                const quantity = parseInt(row.querySelector('input[name="quantity"]').value);
+                const product = products.find(p => p.id === productId);
+                if (!product || isNaN(quantity) || quantity < 1 || quantity > product.stock) {
+                    error = true;
+                }
+            });
+            if (error) {
+                alert('Verifica que la cantidad no supere el stock disponible y que todos los campos estén completos.');
+                return;
+            }
+            rows.forEach(row => {
+                const productId = parseInt(row.querySelector('select[name="product"]').value);
+                const quantity = parseInt(row.querySelector('input[name="quantity"]').value);
+                const product = products.find(p => p.id === productId);
+                if (product) {
+                    product.stock -= quantity;
+                    movements.push({
+                        id: Date.now() + Math.random(),
+                        productId: product.id,
+                        productName: product.name,
+                        type: 'salida',
+                        quantity: quantity,
+                        reason: 'Venta múltiple',
+                        date: new Date().toISOString()
+                    });
+                }
+            });
+            saveToLocalStorage();
+            closeModal('multiSaleModal');
+            updateDisplay();
+            renderRecentMovements(); // <-- Asegura actualización inmediata
+            showNotification('Venta múltiple registrada exitosamente', 'success');
+        });
         // Initialize the application when the DOM is loaded
         document.addEventListener('DOMContentLoaded', initializeApp);
     </script>
